VIVADO/Display3D_20201117/Display3D/Display3D.sdk/.metadata/.plugins/org.eclipse.cdt.ui/DISP3D_bsp_xgpio_intr_tapp_example_1.build.log
16:01:59 **** Build of configuration Debug for project DISP3D_bsp_xgpio_intr_tapp_example_1 ****
make all 
'Building file: ../src/xgpio_intr_tapp_example.c'
'Invoking: MicroBlaze gcc compiler'
mb-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/xgpio_intr_tapp_example.o" -I../../DISP3D_bsp/mbcore/include -mlittle-endian -mcpu=v10.0 -mxl-soft-mul -Wl,--no-relax -ffunction-sections -fdata-sections -MMD -MP -MF"src/xgpio_intr_tapp_example.d" -MT"src/xgpio_intr_tapp_example.o" -o "src/xgpio_intr_tapp_example.o" "../src/xgpio_intr_tapp_example.c"
../src/xgpio_intr_tapp_example.c: In function 'main':
../src/xgpio_intr_tapp_example.c:93:33: error: 'XPAR_INTC_0_GPIO_0_VEC_ID' undeclared (first use in this function); did you mean 'XPAR_INTC_0_GPIO_1_VEC_ID'?
  #define INTC_GPIO_INTERRUPT_ID XPAR_INTC_0_GPIO_0_VEC_ID
                                 ^
../src/xgpio_intr_tapp_example.c:196:8: note: in expansion of macro 'INTC_GPIO_INTERRUPT_ID'
        INTC_GPIO_INTERRUPT_ID,
        ^~~~~~~~~~~~~~~~~~~~~~
../src/xgpio_intr_tapp_example.c:93:33: note: each undeclared identifier is reported only once for each function it appears in
  #define INTC_GPIO_INTERRUPT_ID XPAR_INTC_0_GPIO_0_VEC_ID
                                 ^
../src/xgpio_intr_tapp_example.c:196:8: note: in expansion of macro 'INTC_GPIO_INTERRUPT_ID'
        INTC_GPIO_INTERRUPT_ID,
        ^~~~~~~~~~~~~~~~~~~~~~
make: *** [src/xgpio_intr_tapp_example.o] ÉGÉâÅ[ 1

16:01:59 Build Finished (took 471ms)

